Price a shock off the crash, not off one contact
A hull that came down on a corner reported that corner and was stopped dead
by the solver before the rest of it touched anything, so the corner was the
whole crash however big and however fast the thing was. Shocks are now priced
off the striking body's kinetic energy as well as the contact's overshoot,
whichever is larger, drawn from a reservoir refilled once per body per tick so
hundreds of contacts stay one crash. The hull and the ground get separate
draws, so the ship that levels a hill is wrecked by it too.

Fixed the wave itself creating energy at every fork: giving each of six
neighbours the whole remaining energy made reach go as the logarithm of the
budget, so a three-hundred-block fall broke barely more than a ten-block one.
The wave now spends one shared budget with a cost that grows with distance,
which makes reach linear in energy and volume cubic in it.

Waves too big for a tick are no longer thrown away. They are parked and
resumed, so a large wreck comes apart over about a second instead of stopping
half-done at the per-tick ceiling; maxBlocksPerImpact is a total rather than
a rate and its default is 8192.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>